Updated GSAP CDN from http to https to prevent Mixed Content errors.

--- a/views/anagram.pug
+++ b/views/anagram.pug
@@ -3,8 +3,8 @@ extends layout
 block custom-stylesheets
     link(rel='stylesheet', href='/stylesheets/anagram.css')
 block custom-js
-    script(src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenLite.min.js")
-    script(src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/plugins/CSSPlugin.min.js")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenLite.min.js")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/plugins/CSSPlugin.min.js")
     script(src='/javascripts/anagram.js')
 
 block content
