Minor performance tweaks: - Added async to some javascript files - Made vue to vue.min

--- a/views/anagram.pug
+++ b/views/anagram.pug
@@ -3,9 +3,9 @@ extends layout
 block custom-stylesheets
     link(rel='stylesheet', href='/stylesheets/anagram.css')
 block custom-js
-    script(src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenLite.min.js")
-    script(src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/plugins/CSSPlugin.min.js")
-    script(src='/javascripts/anagram.js')
+    script(async src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenLite.min.js")
+    script(async src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/plugins/CSSPlugin.min.js")
+    script(async src='/javascripts/anagram.js')
 
 block content
     #app
