--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,9 +11,9 @@ html
         link(rel='stylesheet', href='/stylesheets/main.css')
         block custom-stylesheets
         script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js')
-        script(src='https://unpkg.com/vue/dist/vue.js')
+        script(src='https://unpkg.com/vue/dist/vue.min.js')
         // Note: vue.min.js should be used for production.
-        script(src='/javascripts/anagram-nav.js')
+        script(async src='/javascripts/anagram-nav.js')
         block custom-js
 
     body
