--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,6 +2,7 @@ doctype html
 html
     head
         meta(charset='utf-8')
+        meta(name='google-site-verification', content='BtMmWfntdvkPmFCv9CNJydv8aQy29Gq86bE4pUnywa8')
         title= title
         meta(name='viewport', content='width=device-width, initial-scale=1')
         meta(name='description', content=description)
